[package]
name = "rusty-guess-a-sketch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
itertools = "0.11.0"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3.29"
actix-web = "4.4.0"
actix-cors = "0.6.4"
log = "0.4.20"
serde_json = "1.0.108"
