[package]
name = "rusty-guess-a-sketch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
actix-web = "4.4.0"
serde_json = "1.0.108"
async-recursion = "1.0.5"
actix-cors = "0.6.4"
lambda-web = { version = "0.2.1", features = ["actix4"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
